--- a/findnews/src/main/res/layout/popup_window_login.xml
+++ b/findnews/src/main/res/layout/popup_window_login.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorbg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.zdr.findnews.LoginActivity">
     <RelativeLayout
         android:background="@color/colorbg"
         android:id="@+id/rl_keep_top"
